# edit-distance

./: .gitignore  Extrinsic_levenshtein.v  Intrinsic_levenshtein.v  Lemmas.v  Makefile  README.md  StringFacts.v  Verif_levenshtein.v  _CoqProject  dune-project  levenshtein.c  levenshtein.v
theories/: Levenshtein_dp.v  Levenshtein_recursive.v  Verif_levenshtein.v  dune  levenshtein.v
